--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DaniWebStudio</title>
+    <title>DanWebStudio</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -17,5 +17,6 @@
             <li><i class="fa fa-bars"></i></li>
         </ul>
     </nav>
+    <h1 class="title">Welcome to DanWebStudio</h1>
 </body>
 </html>
