--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DanWebStudio</title>
+    <title>DanWebStudios | Home</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
+        <p class="heading">DanWebStudios</p> <!-- Moved outside the <ul> -->
         <ul>
-            <p class="title">DaniWebStudio</p>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><i class="fa fa-bars"></i></li>
         </ul>
     </nav>
-    <h1 class="title">Welcome to DanWebStudio</h1>
+    <h1 class="title">Welcome to DanWebStudios</h1>
 </body>
 </html>
