--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <title>DanWebStudios | Home</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
-        <p class="heading">DanWebStudios</p> <!-- Moved outside the <ul> -->
+        <p class="heading">DanWebStudios</p>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -19,5 +18,9 @@
         </ul>
     </nav>
     <h1 class="title">Welcome to DanWebStudios</h1>
+    <div class="typewriter">
+        Empowering <span id="dynamic-text"></span>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
