Added function to more tabs

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DanWebStudios | Home</title>
+    <title>DanWebStudios | About</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -17,10 +17,11 @@
             <li><i class="fa fa-bars"></i></li>
         </ul>
     </nav>
-    <h1 class="title">Welcome to DanWebStudios</h1>
-    <div class="typewriter">
-        Empowering <span id="dynamic-text"></span>
+    <div class="about"><h1 class="header">About Us:</h1>
+    <p>At DanStudioWeb, we make websites that are built with precision and creativity. I'm Daniel, a passionate web dev who believes that websites should be more than a collection of pages-it should be an experience(like this website!). Unlike cookie-cutter templates or drag and drop web builders, I hand code every project to ensure speed, funtionaltiy, and a unique design that fits your brand or cause perfectly. Whether you need a sleek portfolio, an innovative business site, or an interactive web app, I bring your ideas to life with clean, optimized and resposnive design.<br><br>I'm the only one doing this. I handle every think through orders, maintenence, and even the making of this site. Since I have no employees(yet...), it would be nice if you would donate to support me! <br><strong>Cashapp</strong> - $DanWebStudio<br><strong>BuyMeACoffee</strong> - <a href="https://www.buymeacoffee.com/dangy">buymeacoffee.com/dangy</a> </p> <p style="color: red;"><strong>DISCLAIMER!!</strong></p><p> We don't host your site we give you all the files and you host the site yourself <strong> BUT </strong> we can help you do it! but we will have to talk about extra cost and stuff out off <br><br> Also you can only pay me thru cashapp or donations</p>
+    </p>
     </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
