--- a/services.html
+++ b/services.html
@@ -17,10 +17,7 @@
             <li><i class="fa fa-bars"></i></li>
         </ul>
     </nav>
-    <h1 class="title">Welcome to DanWebStudios</h1>
-    <div class="typewriter">
-        Empowering <span id="dynamic-text"></span>
-    </div>
+    <div id="plans-container" class="plans"></div>
     <script src="index.js"></script>
 </body>
 </html>
