--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DanWebStudios | Home</title>
+    <title>DanWebStudios | Home | Web Designer</title>
+    <meta name="google-site-verification" content="DvpphmfMrtg72G0-XlCkRRXcl0bZ0QSYrFgkOjbEXRw" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
-        <p class="heading">DanWebStudios</p>
+        <p class="heading" id="easter-egg">DanWebStudios</p>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -20,6 +21,20 @@
     <h1 class="title">Welcome to DanWebStudios</h1>
     <div class="typewriter">
         Empowering <span id="dynamic-text"></span>
+    </div>
+    <a href=services.html><button  class=start>Get Started</button></a>
+    <p style="font-family: 'Courier New', Courier, monospace;">Go To The About Tab For More Info</p>
+    <div class="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonial">
+            <p><span class="user">> [Alec H.]</span>: "DanWebStudios transformed my business! Their creativity and innovation are unmatched."</p>
+        </div>
+        <div class="testimonial">
+            <p><span class="user">> [Katie Y.]</span>: "I felt like I was in the Matrix while working with them. 10/10 would recommend!"</p>
+        </div>
+        <div class="testimonial">
+            <p><span class="user">> [Bobby T.]</span>: "Their designs are so futuristic, I thought I was in a sci-fi movie."</p>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
