Refactor HTML structure and styles for improved layout and functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>DanWebStudios | Home | Web Designer</title>
     <meta name="google-site-verification" content="DvpphmfMrtg72G0-XlCkRRXcl0bZ0QSYrFgkOjbEXRw" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        emailjs.init('RZf14MO16obWVRkvY'); // Replace 'RZf14MO16obWVRkvY' with your actual EmailJS user ID
+    </script>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
     <nav class="navbar">
@@ -22,7 +26,7 @@
     <div class="typewriter">
         Empowering <span id="dynamic-text"></span>
     </div>
-    <a href=services.html><button  class=start>Get Started</button></a>
+    <a href="services.html"><button class="start">Get Started</button></a>
     <p style="font-family: 'Courier New', Courier, monospace;">Go To The About Tab For More Info</p>
     <div class="testimonials">
         <h2>Testimonials</h2>
@@ -30,10 +34,10 @@
             <p><span class="user">> [Alec H.]</span>: "DanWebStudios transformed my business! Their creativity and innovation are unmatched."</p>
         </div>
         <div class="testimonial">
-            <p><span class="user">> [Katie Y.]</span>: "I felt like I was in the Matrix while working with them. 10/10 would recommend!"</p>
+            <p><span class="user">> [Katie Y.]</span>: "I felt like people were gonna like my site! 10/10 would recommend!"</p>
         </div>
         <div class="testimonial">
-            <p><span class="user">> [Bobby T.]</span>: "Their designs are so futuristic, I thought I was in a sci-fi movie."</p>
+            <p><span class="user">> [Bobby T.]</span>: "Their designs are so nice, I thought I was dreaming."</p>
         </div>
     </div>
     <script src="index.js"></script>
