--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <title>DanWebStudios | Home</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
     <nav class="navbar">
@@ -17,7 +17,13 @@
             <li><i class="fa fa-bars"></i></li>
         </ul>
     </nav>
-    <div id="plans-container" class="plans"></div>
+    <div style="height: 100vh;"></div> <!-- Spacer to ensure scrolling -->
+    <section id="plans-section" style="margin-top: 60px;">
+        <div id="plans-container" class="plans">
+            <!-- Fallback message -->
+            <p>Loading plans...</p>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
