--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DanWebStudios | Home</title>
+    <title>DanWebStudios | Contact</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -17,10 +17,18 @@
             <li><i class="fa fa-bars"></i></li>
         </ul>
     </nav>
-    <h1 class="title">Welcome to DanWebStudios</h1>
-    <div class="typewriter">
-        Empowering <span id="dynamic-text"></span>
+    <div class="contact-container">
+        <h1>Contact Us</h1>
+        <p>Connect with us through the following platforms:</p>
+        <div class="contact-info">
+            <p><i class="fa fa-envelope"></i> Email: <a href="mailto:danielgyebi17@gmail.com">danielgyebi17@gmail.com</a></p>
+            <p><i class="fa fa-phone"></i> Phone: <a href="tel:+9453011286">+1 945 301 1286</a></p>
+            <p><i></i> Discord: danielthestarha3794</p>
+            <p><i></i> Reddit: u/key_bad4337</p>
+        </div>
+        <div class="social-links">
+            <a href="https://youtube.com/@d8ngy" target="_blank"><i class="fa fa-youtube"></i> YouTube</a>
+            <a href="https://tiktok.com/@dangyofficial" target="_blank"><i class="fa fa-tiktok"></i> TikTok</a>        </div>
     </div>
-    <script src="index.js"></script>
 </body>
 </html>
